# paper-knowledge-graph

./: .gitignore  __init__.py  compose.yaml  main.py  pyproject.toml
config/: spark_config.py
report/: report.md
src/ingestion/: load_to_staging.py
src/loading/: bulk_import.sh  load_papers.py  load_rs.py  prep_nodes.py  prep_rs.py
src/transformation/: authors_normal.py  categories_normal.py  clean.py  concept_mining.py  embeddings.py  papers_normal.py
