[project]
name = "rkg"
version = "0.1.0"
description = "arXiv knowledge graph using PySpark and Veo4j"
authors = [
    {name = "heardchef33",email = "prachathornth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
