[project]
name = "rkg"
version = "0.1.0"
description = "arXiv knowledge graph using PySpark and Veo4j"
authors = [
    {name = "heardchef33",email = "prachathornth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "neo4j (>=6.0.3,<7.0.0)",
    "graphdatascience (>=1.17,<2.0)",
    "nltk (>=3.9.2,<4.0.0)",
]

[project.optional-dependencies]
dev = []

[tool.poetry]
name = "rkg"
version = "0.1.0"
description = "arXiv knowledge graph using PySpark and Veo4j"
authors = ["heardchef33 <prachathornth@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = ">=3.12"
pyspark = ">=4.0.1,<5.0.0"
numpy = ">=2.3.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
